--- a/verl/trainer/config/sft_trainer.yaml
+++ b/verl/trainer/config/sft_trainer.yaml
@@ -5,15 +5,15 @@ data:
   train_files: ~/data/gsm8k/train.parquet
   val_files: ~/data/gsm8k/test.parquet
   # Single-turn settings
-  prompt_key: question
+  prompt_key: prompt 
   response_key: answer
-  prompt_dict_keys: ['question']
-  response_dict_keys: ['answer']
+  prompt_dict_keys: null
+  response_dict_keys: null
   # Multi-turn settings
   multiturn:
     enable: false  # Set to true to use multi-turn dataset
     messages_key: messages  # Key for messages list in multi-turn mode
-  max_length: 1024
+  max_length: 9216
   truncation: error
   balance_dp_token: False
   chat_template: null
